# django-accounts

./: .gitignore  README  pytest.ini  setup.cfg  setup.py
accounts/: urls.py  utils.py  validations.py
accounts/api/v1/: urls.py
accounts/api/v1/serializers/: profile.py  user.py
accounts/api/v1/views/: profile.py  user.py
accounts/migrations/: 0026_auto_20230626_1342.py
accounts/models/: config.py  profile.py
accounts/tests/: __init__.py
accounts/tests/test_profile/: test_following_system.py
core/: settings.py  urls.py
