[metadata]
name = django-accounts
version = file:version
author = Amirhosein Ghorbani
# author_email =
description = Django Accounts
# long_description = file:README.rst
# url = https://github.com/amir4v/-/
license = MIT License
keywords = django accounts
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
install_requires =
    django==3.2

    Pillow
    
    djangorestframework
    djangorestframework_simplejwt

    redis
    celery
    celery[redis]
    django-celery
    django-redis

    pytest
    pytest-django
    
    django-debug-toolbar